# 4GARTHA

./: .gitignore  0001-ingest-session-lock.patch  CODEOWNERS  CONTRIBUTING.md  README.md  SPEC.md  _probe.txt  ingest_root_entropy.py  memory_system.py  pyproject.toml  test_memory_system.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  nre-verify-fixtures.yml  setup-directories.yml  static.yml
canon/: fileref.py  ids.py  root_entropy.py  strings.py
ci/: assert_node_id.py  run_verify_fixtures.sh  verify_commit_fixture.sh
cli/: nre-verify-fixtures  nre-verify-fixtures.cmd
commit-fixtures/: README.md
fixtures/cases/dss_requires_non_null_hash/: cap.json  dss.json  expected.json  wss.json
fixtures/cases/ok_minimal/: cap.json  expected.json
fixtures/cases/ok_payload_key_ordering/: cap.json  dss.json  expected.json  wss.json
fixtures/cases/schema_error_cap_missing_kind/: cap.json  expected.json  wss.json
fixtures/cases/wss_hash_integrity_failed/: cap.json  dss.json  expected.json  wss.json
fixtures/vectors/: fileref.json  ids.json  strings.json
ledger/schema/: node.schema.json
schemas/: SCHEMA_SHA256  nre-artifacts-v1.0.2.schema.json
scripts/: insert_fix_tools_imports.py
src/ledger/: __init__.py  cas.py  cli.py  locks.py  manifest.py  replay.py  verify.py
tests/: test_hash.py  test_ingest_session_lock.py  test_replay.py
tools/: _schema.py  check_append_only.py  install_hooks.py  replay_new_nodes.py
tools/hooks/: pre-commit
transforms/: README.md  concat_parents.py
verify/: verify.py
