[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-ledger"
version = "0.1.0"
description = "Immutable, content-addressed DAG ledger + Sprint-1 verifier fencepost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema==4.25.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[project.scripts]
ledger = "ledger.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
